tests/baselines/reference/lambdaParameterWithTupleArgsHasCorrectAssignability.errors.txt
lambdaParameterWithTupleArgsHasCorrectAssignability.ts(14,39): error TS2344: Type '[string, boolean]' does not satisfy the constraint 'MyTuple'.
  Type at position 0 in source is not compatible with type at position 0 in target.
    Type 'string' is not assignable to type 'MyTupleItem'.
lambdaParameterWithTupleArgsHasCorrectAssignability.ts(17,14): error TS2345: Argument of type 'GenericClass<[str: MyTupleItem]>' is not assignable to parameter of type 'GenericClass<[string, boolean]>'.
  Types of property 'from' are incompatible.
    Type 'GenericFunction<[str: MyTupleItem]> | undefined' is not assignable to type 'GenericFunction<[string, boolean]> | undefined'.
      Type 'GenericFunction<[str: MyTupleItem]>' is not assignable to type 'GenericFunction<[string, boolean]>'.
        Types of parameters 'str' and 'fromArgs_0' are incompatible.
          Type 'string' is not assignable to type 'MyTupleItem'.
lambdaParameterWithTupleArgsHasCorrectAssignability.ts(17,49): error TS2339: Property 'length' does not exist on type 'MyTupleItem'.
lambdaParameterWithTupleArgsHasCorrectAssignability.ts(20,14): error TS2345: Argument of type 'GenericClass<[str: MyTupleItem, _unused_num: MyTupleItem]>' is not assignable to parameter of type 'GenericClass<[string, boolean]>'.
  Types of property 'from' are incompatible.
    Type 'GenericFunction<[str: MyTupleItem, _unused_num: MyTupleItem]> | undefined' is not assignable to type 'GenericFunction<[string, boolean]> | undefined'.
      Type 'GenericFunction<[str: MyTupleItem, _unused_num: MyTupleItem]>' is not assignable to type 'GenericFunction<[string, boolean]>'.
        Types of parameters 'str' and 'fromArgs_0' are incompatible.
          Type 'string' is not assignable to type 'MyTupleItem'.
lambdaParameterWithTupleArgsHasCorrectAssignability.ts(20,64): error TS2339: Property 'length' does not exist on type 'MyTupleItem'.


==== lambdaParameterWithTupleArgsHasCorrectAssignability.ts (5 errors) ====
    type MyTupleItem = {};
    type MyTuple = [MyTupleItem, ...MyTupleItem[]];
    
    type GenericFunction<T extends MyTuple> = (...fromArgs: T) => void;
    
    class GenericClass<T extends MyTuple> {
        from: GenericFunction<T> | undefined;
    }
    
    function createClass<T extends MyTuple>(f: GenericFunction<T>): GenericClass<T> {
        return new GenericClass<T>(/* ... use f */);
    }
    
    function consumeClass(c: GenericClass<[string, boolean]>) { }
                                          ~~~~~~~~~~~~~~~~~
!!! error TS2344: Type '[string, boolean]' does not satisfy the constraint 'MyTuple'.
!!! error TS2344:   Type at position 0 in source is not compatible with type at position 0 in target.
!!! error TS2344:     Type 'string' is not assignable to type 'MyTupleItem'.
    
    // should work
    consumeClass(createClass(str => console.log(str.length)));
                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'GenericClass<[str: MyTupleItem]>' is not assignable to parameter of type 'GenericClass<[string, boolean]>'.
!!! error TS2345:   Types of property 'from' are incompatible.
!!! error TS2345:     Type 'GenericFunction<[str: MyTupleItem]> | undefined' is not assignable to type 'GenericFunction<[string, boolean]> | undefined'.
!!! error TS2345:       Type 'GenericFunction<[str: MyTupleItem]>' is not assignable to type 'GenericFunction<[string, boolean]>'.
!!! error TS2345:         Types of parameters 'str' and 'fromArgs_0' are incompatible.
!!! error TS2345:           Type 'string' is not assignable to type 'MyTupleItem'.
                                                    ~~~~~~
!!! error TS2339: Property 'length' does not exist on type 'MyTupleItem'.
    
    // should work
    consumeClass(createClass((str, _unused_num) => console.log(str.length)));
                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'GenericClass<[str: MyTupleItem, _unused_num: MyTupleItem]>' is not assignable to parameter of type 'GenericClass<[string, boolean]>'.
!!! error TS2345:   Types of property 'from' are incompatible.
!!! error TS2345:     Type 'GenericFunction<[str: MyTupleItem, _unused_num: MyTupleItem]> | undefined' is not assignable to type 'GenericFunction<[string, boolean]> | undefined'.
!!! error TS2345:       Type 'GenericFunction<[str: MyTupleItem, _unused_num: MyTupleItem]>' is not assignable to type 'GenericFunction<[string, boolean]>'.
!!! error TS2345:         Types of parameters 'str' and 'fromArgs_0' are incompatible.
!!! error TS2345:           Type 'string' is not assignable to type 'MyTupleItem'.
                                                                   ~~~~~~
!!! error TS2339: Property 'length' does not exist on type 'MyTupleItem'.
    